--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,6 +56,7 @@
     --shadow-2xl: var(--shadow-2xl);
 }
 :root {
+    /* Sunset Horizon */
     --background: oklch(0.9856 0.0084 56.3169);
     --foreground: oklch(0.3353 0.0132 2.7676);
     --card: oklch(1 0 0);
@@ -103,6 +104,7 @@
 }
 
 .dark {
+    /* Sunset Horizon Dark */
     --background: oklch(0.2569 0.0169 352.4042);
     --foreground: oklch(0.9397 0.0119 51.3156);
     --card: oklch(0.3184 0.0176 341.4465);
